[gd_scene load_steps=9 format=3 uid="uid://d0u35eyn7wls3"]

[ext_resource type="Script" path="res://Scripts/EnemyBullet.gd" id="1_i34x2"]
[ext_resource type="Texture2D" uid="uid://c0x06v0gpmfeh" path="res://Assets/FX/Death Explosion.png" id="2_julr6"]

[sub_resource type="CircleShape2D" id="CircleShape2D_6yjpp"]

[sub_resource type="AtlasTexture" id="AtlasTexture_4xsbk"]
atlas = ExtResource("2_julr6")
region = Rect2(0, 0, 50, 55)

[sub_resource type="AtlasTexture" id="AtlasTexture_1vc6g"]
atlas = ExtResource("2_julr6")
region = Rect2(50, 0, 50, 55)

[sub_resource type="AtlasTexture" id="AtlasTexture_clrsl"]
atlas = ExtResource("2_julr6")
region = Rect2(100, 0, 50, 55)

[sub_resource type="AtlasTexture" id="AtlasTexture_k7qct"]
atlas = ExtResource("2_julr6")
region = Rect2(150, 0, 50, 55)

[sub_resource type="SpriteFrames" id="SpriteFrames_smjwf"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4xsbk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1vc6g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_clrsl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k7qct")
}],
"loop": false,
"name": &"impact",
"speed": 8.0
}]

[node name="EnemyBullet" type="Area2D"]
script = ExtResource("1_i34x2")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_6yjpp")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_smjwf")
animation = &"impact"

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
